chenge path for svg

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
 
           <div class="about__column about__column--small-cards ">
-            <div class="about__card about__card--small card" style="background-image: url(/img/about-svg-1.svg);">
+            <div class="about__card about__card--small card" style="background-image: url(img/about-svg-1.svg);">
               <div class="card__content">
                 <h3 class="card__title">
                   Консультация с широким активом
@@ -142,7 +142,7 @@
                 </p>
               </div>
             </div>
-            <div class="about__card about__card--small card" style="background-image: url(/img/about-svg-2.svg);">
+            <div class="about__card about__card--small card" style="background-image: url(img/about-svg-2.svg);">
               <div class="card__content">
                 <h3 class="card__title">
                   В своём стремлении повысить
